--- a/elements.html
+++ b/elements.html
@@ -44,8 +44,8 @@
 								</header>
 
 
-								<p><span class="image left"><img src="images/A Sanders_2.121.jpg" alt="" /></span>My decision to change careers into data analytics was influenced by my desire for knowledge and drive to put it to use. My passion for data-driven decision making has grown over the course of my more than ten years in business operations and management.</p>
-								<p></span>Through data preparation, analysis, and management, as well as the presentation of insightful data insights and visualizations, I am able to effectively use data by drawing on my understanding of business, employees, and communication.</p>
+								<p><span class="image left"><img src="images/A Sanders_2.121.jpg" alt="" /></span>I was motivated to switch to a career in data analytics due to my thirst for knowledge and eagerness to apply it. My interest in utilizing data to make informed decisions has developed significantly during my extensive experience in business operations and management, spanning over a decade.</p>
+								<p></span>By leveraging my comprehension of business, personnel, and communication, I can proficiently employ data through tasks such as data preparation, analysis, and management, as well as presenting informative data insights and visualizations.</p>
 
 								<hr>
 									<hr>
